--- a/css/bootstrap/config.json
+++ b/css/bootstrap/config.json
@@ -378,5 +378,5 @@
     "responsive-embed.less"
   ],
   "js": [],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=ad0a02d8a36e07777582"
+  "customizerUrl": "https://getbootstrap.com/customize/?id=ad0a02d8a36e07777582"
 }
